--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,11 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_settings1"
+        android:icon="@drawable/ic_add_black_24dp"
+        android:orderInCategory="101"
+        android:title="@string/action_settings"
+        app:showAsAction="always" />
 </menu>
